--- a/QuanLyTiecCuoi/MVVM/View/MonAn/SuaMonAn.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/MonAn/SuaMonAn.xaml
@@ -26,7 +26,7 @@
                 </StackPanel>
                 <Image 
                     x:Name="imgMonAn"
-                    Source="{Binding ImagePath}" 
+                    Source="{Binding HinhAnh}" 
                     Width="200" Height="170" 
                     Stretch="UniformToFill" 
                     Margin="5"
