--- a/QuanLyTiecCuoi/MVVM/View/ControlBar/ControlBarUserControl.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/ControlBar/ControlBarUserControl.xaml
@@ -1,5 +1,6 @@
 ﻿<UserControl x:Class="QuanLyTiecCuoi.MVVM.View.ControlBar.ControlBarUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:vm="clr-namespace:QuanLyTiecCuoi.MVVM.ViewModel"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
