--- a/QuanLyTiecCuoi/MVVM/View/HoaDon/ChiTietHoaDonWindow.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/HoaDon/ChiTietHoaDonWindow.xaml
@@ -328,7 +328,7 @@
                                             <GridViewColumn.CellTemplate>
                                                 <DataTemplate>
                                                     <xctk:IntegerUpDown
-                                                        IsEnabled="{Binding CoTheThayDoiSL}"
+                                                        IsEnabled="{Binding DataContext.CoTheThayDoiSL, RelativeSource={RelativeSource AncestorType=Window}}"
                                                         Value="{Binding SoLuong}"
                                                         Name="myUpDownControl">
                                                         <i:Interaction.Triggers>
