--- a/QuanLyTiecCuoi/MVVM/View/Sanh/SanhView.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/Sanh/SanhView.xaml
@@ -7,16 +7,17 @@
       xmlns:vm="clr-namespace:QuanLyTiecCuoi.MVVM.ViewModel"
       mc:Ignorable="d" 
       d:DesignHeight="1000" d:DesignWidth="1600"
-      Title="Quản lý Sảnh Tiệc">
+      Title="Quản lý Sảnh Tiệc"
+      Loaded="Page_Loaded">
 
     <Page.Resources>
         <local:ImagePathConverter x:Key="ImagePathConverter"/>
     </Page.Resources>
 
-    <Border BorderBrush="Black" BorderThickness="3" CornerRadius="40" Margin="20">
+    <Border BorderBrush="#673500" BorderThickness="2" CornerRadius="40" Background="#ffffee">
         <Grid Margin="20">
             <StackPanel>
-                <Grid HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="0,0,0,20">
+                <Grid HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="3*"/>
                         <ColumnDefinition Width="Auto"/>
@@ -24,12 +25,8 @@
                     </Grid.ColumnDefinitions>
 
                     <!-- Tiêu đề -->
-                    <TextBlock Text="Serenité Wedding - Trang Chủ" 
-                    FontSize="40" FontFamily="Cambria" FontWeight="Bold" VerticalAlignment="Center" Grid.Column="0"/>
-
-                    <!-- Nút Chi Tiết Loại Sảnh -->
-                    <Button Content="Chi tiết Loại Sảnh" Style="{StaticResource ButtonStyle}" Width="220" Height="40" FontSize="16" Margin="0,0,30,0" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" 
-                            Click="btnCTLoaiSanh_Click"/>
+                    <TextBlock Text="Serenité Wedding" Style="{StaticResource Header1Style}"
+                     VerticalAlignment="Center" Grid.Column="0"/>
 
                     <!-- Nút Chi Tiết Sảnh -->
                     <Button Content="Chi tiết Sảnh" Style="{StaticResource ButtonStyle}" Width="180" Height="40" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="2" 
@@ -37,7 +34,7 @@
                 </Grid>
 
                 <!-- Bộ lọc loại sảnh, ngày, ca -->
-                <Grid Margin="0,20,0,20" HorizontalAlignment="Stretch" VerticalAlignment="Center">
+                <Grid Margin="0,10,0,20" HorizontalAlignment="Stretch" VerticalAlignment="Center">
                     <Grid.ColumnDefinitions>
                         <!-- Cột cho "Chọn loại sảnh" và Combobox -->
                         <ColumnDefinition Width="Auto"/>
@@ -52,7 +49,7 @@
                     <!-- Chọn Loại Sảnh -->
                     <StackPanel Orientation="Horizontal" Margin="30,0,0,0" Grid.Column="0" >
                         <TextBlock Text="Loại Sảnh: " Margin="0,0,5,0" VerticalAlignment="Center" FontSize="20" FontFamily="Cambria"/>
-                        <ComboBox Width="200" Margin="0,0,10,0" FontSize="20" FontFamily="Cambria">
+                        <ComboBox Width="150" Margin="0,0,10,0" FontSize="20" FontFamily="Cambria">
                             <ComboBoxItem Content="Trưa"/>
                             <ComboBoxItem Content="Tối"/>
                         </ComboBox>
@@ -61,13 +58,13 @@
                     <!-- Chọn ngày -->
                     <StackPanel Orientation="Horizontal" Margin="50,0,0,0" Grid.Column="1" >
                         <TextBlock Text="Ngày: " Margin="0,0,5,0" VerticalAlignment="Center" FontSize="20" FontFamily="Cambria"/>
-                        <DatePicker Width="250" Margin="0,0,10,0" FontSize="20" FontFamily="Cambria"/>
+                        <DatePicker Width="200" Margin="0,0,10,0" FontSize="20" FontFamily="Cambria"/>
                     </StackPanel>
                 
                     <!-- Chọn ca -->
                     <StackPanel Orientation="Horizontal" Margin="30,0,0,0" Grid.Column="2" >
                         <TextBlock Text="Ca làm: " Margin="0,0,5,0" VerticalAlignment="Center" FontSize="20" FontFamily="Cambria"/>
-                        <ComboBox Width="200" Margin="0,0,10,0" FontSize="20" FontFamily="Cambria">
+                        <ComboBox Width="150" Margin="0,0,10,0" FontSize="20" FontFamily="Cambria">
                             <ComboBoxItem Content="Trưa"/>
                             <ComboBoxItem Content="Tối"/>
                         </ComboBox>
@@ -82,7 +79,7 @@
 
 
                 <!-- Danh sách sảnh hiển thị bằng hình ảnh -->
-                <ScrollViewer VerticalScrollBarVisibility="Auto" Height="700" Margin="0,20,0,0">
+                <ScrollViewer VerticalScrollBarVisibility="Auto" Height="700" Margin="0">
                     <ItemsControl ItemsSource="{Binding DanhSachSanh}">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
@@ -97,13 +94,12 @@
                                     <Grid Margin="15" >
                                         <!-- Cấu trúc hàng -->
                                         <Grid.RowDefinitions>
-                                            <RowDefinition Height="220"/>
                                             <RowDefinition Height="*"/>
                                         </Grid.RowDefinitions>
                                         
                                         <!-- Cấu trúc 2 cột: Hình ảnh và Thông tin -->
                                         <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="380"/>
+                                            <ColumnDefinition Width="240"/>
                                             <ColumnDefinition Width="2*"/>
                                         </Grid.ColumnDefinitions>
 
