--- a/QuanLyTiecCuoi/MVVM/View/DatTiec/DatTiecView.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/DatTiec/DatTiecView.xaml
@@ -9,7 +9,7 @@
       Title="DatTiec">
     <Viewbox Stretch="Uniform">
         <Grid Width="1600" Height="1000">
-            <Border BorderBrush="Black" BorderThickness="3" CornerRadius="40" Margin="20">
+            <Border BorderBrush="#673500" Background="#ffffee" BorderThickness="3" CornerRadius="40" Margin="20">
                 <!-- Root Grid full màn hình -->
                 <Grid Margin="20">
                     <Grid.RowDefinitions>
@@ -22,11 +22,14 @@
                     <!-- Header -->
                     <StackPanel Grid.Row="0" Margin="0 10">
                         <TextBlock 
-                            FontFamily="Cambria"
-                            Text="Serenité Wedding" 
-                            FontSize="60" 
-                            FontWeight="SemiBold" 
-                            HorizontalAlignment="Left"/>
+                           Text="Serenité Wedding"
+                           FontWeight="Bold"
+                           Grid.Row="0"
+                           Grid.ColumnSpan="4"
+                           HorizontalAlignment="Left"
+                           VerticalAlignment="Bottom"
+                           Margin="10,15,10,0"
+                           Style="{StaticResource Header1Style}" />
                     </StackPanel>
 
                     <!-- Input controls -->
@@ -34,7 +37,8 @@
                         <ComboBox
                             x:Name="FilterComboBox"
                             Width="260" Height="40" 
-                            FontSize="20" 
+                            FontSize="20"
+                            FontFamily="Cambria"
                             Margin="10"
                             ItemsSource="{Binding DanhSachTieuChi}"
                             SelectedItem="{Binding TieuChiDangChon}"
@@ -52,7 +56,8 @@
                             TextAlignment="Center"
                             VerticalContentAlignment="Center"
                             FontStyle="Italic" 
-                            FontSize="18"
+                            FontSize="20"
+                            FontFamily="Cambria"
                             BorderThickness="1"/>
                         <DatePicker
                             Margin="10 0"
@@ -68,6 +73,7 @@
                     <!-- ListView section -->
                     <DataGrid 
                         x:Name="MyDataGrid"
+                        Background="White"
                         ItemsSource="{Binding DanhSachDatTiec}" 
                         AutoGenerateColumns="False"
                         HorizontalAlignment="Stretch" 
@@ -115,8 +121,8 @@
                         HorizontalAlignment="Right" 
                         Margin="0,10,0,0" 
                         Grid.Row="3">
-                        <Button Content="Thêm tiệc cưới" Click="Add_Click"  Style="{StaticResource ButtonStyle}"/>
-                        <Button Content="In hóa đơn" Click="InHoaDon_Click" Style="{StaticResource ButtonStyle}"/>
+                        <Button Content="Thêm tiệc cưới" Click="Add_Click"  Style="{StaticResource ButtonStyle}" FontSize="20" FontFamily="Cambria"/>
+                        <Button Content="In hóa đơn" Click="InHoaDon_Click" Style="{StaticResource ButtonStyle}" FontSize="20" FontFamily="Cambria"/>
                     </StackPanel>
                 </Grid>
             </Border>
