--- a/QuanLyTiecCuoi/MVVM/View/DatTiec/ThemTiecView.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/DatTiec/ThemTiecView.xaml
@@ -11,7 +11,7 @@
     <!-- Viewbox giúp co giãn toàn bộ giao diện theo kích thước khung -->
     <Viewbox Stretch="Uniform">
         <Grid Width="1600" Height="1000">
-            <Border BorderBrush="Black" BorderThickness="3" CornerRadius="40" Margin="20">
+            <Border BorderBrush="#673500" Background="#ffffee" BorderThickness="3" CornerRadius="40" Margin="20">
                 <Grid Margin="20">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
@@ -35,21 +35,25 @@
                         Margin="0 0 20 0"
                         Grid.Column="0"
                         Style="{StaticResource ButtonStyle}"/>
-
+                        
                         <TextBlock 
-                        Text="Serenité Wedding" 
-                        FontSize="60" 
-                        FontFamily="Cambria"
-                        FontWeight="SemiBold" 
-                        VerticalAlignment="Center"
-                        Margin="20 0"
-                        Grid.Column="1"/>
+                           Text="Serenité Wedding"
+                           FontWeight="Bold"
+                           Grid.Row="0"
+                           Grid.Column="1"
+                           Grid.ColumnSpan="4"
+                           HorizontalAlignment="Left"
+                           VerticalAlignment="Bottom"
+                           Margin="10,15,10,0"
+                           Style="{StaticResource Header1Style}" />
+
 
                         <Button 
                         Command="{Binding LuuCommand}"
                         Click="LuuTiec"
                         Content="Đặt tiệc" 
                         FontSize="24"
+                        FontFamily="Cambria"
                         Padding="20 5"
                         Margin="0 0 40 0"
                         HorizontalAlignment="Right"
@@ -59,7 +63,7 @@
                     </Grid>
 
                     <!-- Content -->
-                    <Border Grid.Row="1" BorderBrush="Black" BorderThickness="3" CornerRadius="40" Margin="0">
+                    <Border Grid.Row="1" BorderBrush="#673500" Background="White" BorderThickness="3" CornerRadius="40" Margin="0">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
@@ -69,7 +73,7 @@
                             <!-- Title -->
                             <TextBlock 
                             Text="Biểu mẫu 2. Đặt Tiệc Cưới" 
-                            FontSize="36" 
+                            FontSize="40" 
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
                             FontFamily="Cambria"
@@ -139,6 +143,8 @@
                                             Margin="20 0"
                                             Width="250"
                                             FontSize="26"
+                                            FontFamily="Cambria"
+                                            HorizontalAlignment="Center"
                                             VerticalAlignment="Center"
                                             x:Name="FilterDatePicker"
                                             SelectedDateChanged="FilterDatePicker_SelectedDateChanged"/>
