--- a/QuanLyTiecCuoi/MVVM/View/DatTiec/SuaTiecView.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/DatTiec/SuaTiecView.xaml
@@ -11,7 +11,7 @@
     <!-- Viewbox giúp co giãn toàn bộ giao diện theo kích thước khung -->
     <Viewbox Stretch="Uniform">
         <Grid Width="1600" Height="1000">
-            <Border BorderBrush="Black" BorderThickness="3" CornerRadius="40" Margin="20">
+            <Border BorderBrush="#673500" Background="#ffffee" BorderThickness="3" CornerRadius="40" Margin="20">
                 <Grid Margin="20">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
@@ -22,9 +22,10 @@
                     <Grid Grid.Row="0" Margin="0 10">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="4*"/>
-                            <ColumnDefinition Width="0.5*"/>
-                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="98*"/>
+                            <ColumnDefinition Width="953*"/>
+                            <ColumnDefinition Width="131*"/>
+                            <ColumnDefinition Width="263*"/>
                         </Grid.ColumnDefinitions>
 
                         <Button Content="⮜" Width="50" Height="50" 
@@ -32,7 +33,6 @@
                         VerticalAlignment="Center" 
                         HorizontalAlignment="Left"
                         Click="BackButton_Click"
-                        Margin="0 0 20 0"
                         Grid.Column="0"
                         Style="{StaticResource ButtonStyle}"/>
 
@@ -41,10 +41,9 @@
                            FontWeight="Bold"
                            Grid.Row="0"
                            Grid.Column="1"
-                           Grid.ColumnSpan="4"
-                           HorizontalAlignment="Left"
+                           Grid.ColumnSpan="2"
                            VerticalAlignment="Bottom"
-                           Margin="10,15,10,0"
+                           Margin="10,0,0,0"
                            Style="{StaticResource Header1Style}" />
 
                         <Button 
@@ -54,15 +53,15 @@
                         FontSize="24"
                         FontFamily="Cambria"
                         Padding="20 5"
-                        Margin="0 0 40 0"
-                        HorizontalAlignment="Right"
+                        Margin="116,0,0,0"
+                        HorizontalAlignment="Left"
                         VerticalAlignment="Center"
-                        Grid.Column="3"
+                        Grid.Column="4"
                         Style="{StaticResource ButtonStyle}"/>
                     </Grid>
 
                     <!-- Content -->
-                    <Border Grid.Row="1" BorderBrush="Black" BorderThickness="3" CornerRadius="40" Margin="0">
+                    <Border Grid.Row="1" Background ="White" BorderBrush="Black" BorderThickness="3" CornerRadius="40" Margin="0">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
